用户文件完后

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="./uesr/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="./uesr/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="./uesr/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -50,7 +50,7 @@
             <div class="layui-side-scroll">
                 <div class="userinfo">
                     <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
-                        class="layui-nav-img">
+                        class="layui-nav-img" id="nihao">
                     <span class="text-avatar">A</span>
 
                     <span id="welcome">欢迎***</span>
@@ -73,9 +73,9 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">基本资料</a></dd>
-                            <dd><a href="javascript:;">更换头像</a></dd>
-                            <dd><a href="javascript:;">重置密码</a></dd>
+                            <dd><a href="./uesr/user_info.html" target="fm">基本资料</a></dd>
+                            <dd><a href="./uesr/user_avatar.html" target="fm">更换头像</a></dd>
+                            <dd><a href="./uesr/user_pwd.html" target="fm">重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
